--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,15 @@ body {
     background-color: #191919;
 }
 
+body,html {
+    margin: 0;
+    padding: 0;
+}
+
+  * {
+    box-sizing: border-box;
+}
+
 body::-webkit-scrollbar {
     display: none;
 }
@@ -77,4 +86,9 @@ h2 {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+}
+
+.link {
+    color: blue;
+    text-decoration: underline;
 }
